--- a/my-app/src/vibes.css
+++ b/my-app/src/vibes.css
@@ -44,14 +44,27 @@ html, body, #root {
   z-index: 2;
   margin: 1rem 0;
   color:white;
-  padding: 10px 20px;
+  padding: 10px 15px;
   font-size:21pt;
+}
+
+.borrowButton, .logoutButton {
+    font-size:21px;
+    margin-left:5px;
+
+}
+
+.deleteButton {
+    font-size:21px;
+    margin-left:10px;
 }
 
 label {
   display: block;
   margin: 0.5rem 0;
   font-size: 18pt;
+      list-style: none;
+      color:white;
 }
 h1 {
   font-size: 20pt;
@@ -73,6 +86,12 @@ input {
   width:12vw;
 }
 
-label {
-    color:white;
+
+.booktitle {
+    font-size: 21px;
+    list-style: none;
+}
+
+.loginTitle {
+    font-size:36px;
 }
