--- a/my-app/src/vibes.css
+++ b/my-app/src/vibes.css
@@ -95,3 +95,81 @@ input {
 .loginTitle {
     font-size:36px;
 }
+
+/* input field design from https://codepen.io/PRtheRose/pen/BNgEJo */
+
+@keyframes gradient {
+	 0% {
+		 background-position: 0 0;
+	}
+	 100% {
+		 background-position: 100% 0;
+	}
+}
+ input {
+	 position: relative;
+	 display: flex;
+	 flex-direction: row;
+	 width: 100%;
+	 max-width: 400px;
+	 margin: 0 auto;
+	 border-radius: 10px;
+	 padding: 1.4rem 2rem 1.6rem;
+	 background: rgba(178, 156, 113, 0.8);
+     border: 2px solid rgba(255, 255, 255, 0.68);
+     font-size:30px;
+     color:white;
+}
+ input:after {
+	 content: "";
+	 position: absolute;
+	 left: 0px;
+	 right: 0px;
+	 bottom: 0px;
+	 z-index: 999;
+	 height: 2px;
+	 border-bottom-left-radius: 2px;
+	 border-bottom-right-radius: 2px;
+	 background-position: 0% 0%;
+	 background: linear-gradient(to right, #b294ff, #57e6e6, #feffb8, #57e6e6, #b294ff, #57e6e6);
+	 background-size: 500% auto;
+	 animation: gradient 3s linear infinite;
+}
+ input input {
+	 flex-grow: 1;
+	 color: #bfd2ff;
+	 font-size: 1.8rem;
+	 line-height: 2.4rem;
+	 vertical-align: middle;
+}
+input input::-webkit-input-placeholder {
+	 color: #ffffff;
+}
+input button {
+	 color: #7881a1;
+	 font-size: 2.4rem;
+	 line-height: 2.4rem;
+	 vertical-align: middle;
+	 transition: color 0.25s;
+}
+input button:hover {
+	 color: #bfd2ff;
+}
+ 
+/* fixing placeholder text color */
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+    color: #cecece;
+}
+input:-moz-placeholder,
+textarea:-moz-placeholder {
+  color: #cecece;
+}
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+    color: #cecece;
+}
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+    color: #cecece;
+}
